# eink-weather-rs

./: Cargo.toml  README.md  ca_cert.pem  rust-toolchain.toml
.cargo/: config.toml
src/: lib.rs  open_meteo.rs  wifi.rs
