[package]
edition = "2021"
name    = "eink-weather"
version = "0.1.0"

[[bin]]
name = "eink-weather"
path = "./src/bin/main.rs"

[dependencies]
defmt = "1.0.1"
esp-bootloader-esp-idf = "0.1.0"
esp-hal = { version = "=1.0.0-beta.1", features = [
  "defmt",
  "esp32s3",
  "unstable",
] }

embassy-net = { version = "0.7.0", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
  "dns",
] }
embedded-io = { version = "0.6.1", features = ["defmt-03"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
esp-alloc = { version = "0.8.0", features = ["defmt"] }
esp-println = { version = "0.14.0", features = ["defmt-espflash", "esp32s3"] }
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
esp-hal-embassy = { version = "0.8.1", features = ["defmt", "esp32s3"] }
esp-wifi = { version = "0.14.1", features = [
  "builtin-scheduler",
  "defmt",
  "esp-alloc",
  "esp32s3",
  "smoltcp",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
  "dns-max-server-count-4",
] }
static_cell = { version = "2.1.0", features = ["nightly"] }

embedded-hal-bus = { version = "0.3" }
embedded-graphics = "0.8.1"
tinybmp = "0.6.0"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
chrono = { version = "0.4.40", default-features = false, features = ["serde"] }
serde-json-core = "0.6.0"
serde_repr = "0.1.20"
profont = "0.7.0"
reqwless = { default-features = false, features = [
  "esp-mbedtls",
  "log",
], git = "https://github.com/drogue-iot/reqwless", rev = "311060f9" }

esp-mbedtls = { git = "https://github.com/esp-rs/esp-mbedtls",  features = ["esp32s3"] }
lilygo-epd47 = { git = "https://github.com/jborkowski/lilygo-epd47-rs", rev = "6a95238a"}

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
