[package]
name = "esp-eink-weather"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
]}

esp-hal = { version = "0.22.0", features = [
    "esp32s3",
] }
esp-println = { version = "0.12.0", features = ["esp32s3", "log"] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.5.0" }
embedded-io = "0.6.1"

embedded-io-async = "0.6.1"
embassy-net = { version = "0.4.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet", "dns"] }

esp-wifi = { version = "0.11.0", default-features=false, features = [
    "esp32s3",
    "utils",
    "wifi",
    "esp-alloc",
    "log",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
    "dns-max-server-count-4",
] }
embassy-executor = { version = "0.6.0",  features = [
    "task-arena-size-12288",
] }
embassy-time     = { version = "0.3.1",  features = ["generic-queue-8"] }
esp-hal-embassy  = { version = "0.5.0",  features = ["esp32s3"] }
static_cell      = { version = "2.1.0",  features = ["nightly"] }
critical-section = "1.2.0"


embedded-hal-bus = { version = "0.2" }
embedded-graphics = "0.8.1"
tinybmp = "0.6.0"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
chrono = { version = "0.4.40", default-features = false, features = ["serde"] }
serde-json-core = "0.6.0"
serde_repr = "0.1.20"
profont = "0.7.0"
lilygo-epd47 = "0.5.0"
esp-mbedtls = { git = "https://github.com/esp-rs/esp-mbedtls", rev = "9cce6c2",  features = ["esp32s3"] }
reqwless = { default-features = false, features = [
      "esp-mbedtls",
      "log",
], git = "https://github.com/jborkowski/reqwless", branch = "esp-hal-0.22" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
